# csv-validator

./: .gitignore  README.md  config.example.py  pyproject.toml  run.py
csv_validator/: __init__.py  checker.py  io_utils.py  validators.py
