[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-validator"
version = "0.1.0"
description = "Scheduled CSV validation and formatting tool"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["csv_validator*"]
